Adding and removing entries

--- a/GUIs/edit_window.ui
+++ b/GUIs/edit_window.ui
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <interface>
-  <object id="edit_window" class="ttk.Frame">
+  <object id="edit_window" class="tk.Frame">
     <property name="height">200</property>
     <property name="width">200</property>
     <layout>
@@ -14,6 +14,7 @@
         <property name="selectmode">single</property>
         <layout>
           <property name="column">0</property>
+          <property name="columnspan">2</property>
           <property name="propagate">True</property>
           <property name="row">0</property>
         </layout>
@@ -24,7 +25,7 @@
         <property name="font">{Times New Roman} 12 {}</property>
         <property name="selectmode">single</property>
         <layout>
-          <property name="column">1</property>
+          <property name="column">2</property>
           <property name="propagate">True</property>
           <property name="row">0</property>
         </layout>
@@ -36,7 +37,7 @@
         <property name="font">TkDefaultFont</property>
         <property name="text" translatable="yes">Save</property>
         <layout>
-          <property name="column">3</property>
+          <property name="column">1</property>
           <property name="propagate">True</property>
           <property name="row">1</property>
           <property name="sticky">w</property>
@@ -48,7 +49,7 @@
         <property name="height">10</property>
         <property name="width">50</property>
         <layout>
-          <property name="column">2</property>
+          <property name="column">3</property>
           <property name="columnspan">2</property>
           <property name="propagate">True</property>
           <property name="row">0</property>
@@ -59,7 +60,7 @@
     <child>
       <object id="button_exit" class="tk.Button">
         <property name="command">exit_func</property>
-        <property name="text" translatable="yes">Exit</property>
+        <property name="text" translatable="yes">Back</property>
         <layout>
           <property name="column">0</property>
           <property name="propagate">True</property>
@@ -71,7 +72,7 @@
     <child>
       <object id="Label_1" class="tk.Label">
         <layout>
-          <property name="column">2</property>
+          <property name="column">3</property>
           <property name="propagate">True</property>
           <property name="row">0</property>
           <property name="sticky">nw</property>
