--- a/GUIs/list_window.ui
+++ b/GUIs/list_window.ui
@@ -43,5 +43,16 @@
         </layout>
       </object>
     </child>
+    <child>
+      <object id="Button_1" class="tk.Button">
+        <property name="command">remove_func</property>
+        <property name="text" translatable="yes">Usuń</property>
+        <layout>
+          <property name="propagate">True</property>
+          <property name="row">1</property>
+          <property name="sticky">e</property>
+        </layout>
+      </object>
+    </child>
   </object>
 </interface>
