--- a/GUIs/mainwindow.ui
+++ b/GUIs/mainwindow.ui
@@ -23,7 +23,6 @@
     </layout>
     <child>
       <object id="Frame_2" class="ttk.Frame">
-        <property name="cursor">arrow</property>
         <property name="height">200</property>
         <property name="padding">30</property>
         <property name="width">200</property>
@@ -56,7 +55,6 @@
               <property name="columnspan">1</property>
               <property name="propagate">True</property>
               <property name="row">2</property>
-              <property name="sticky">w</property>
             </layout>
           </object>
         </child>
@@ -85,7 +83,7 @@
               <property name="column">0</property>
               <property name="columnspan">2</property>
               <property name="propagate">True</property>
-              <property name="row">3</property>
+              <property name="row">4</property>
             </layout>
           </object>
         </child>
@@ -94,12 +92,27 @@
             <property name="anchor">n</property>
             <property name="command">edit_func</property>
             <property name="text" translatable="yes">Edit</property>
-            <property name="width">4</property>
+            <property name="width">5</property>
             <layout>
               <property name="column">1</property>
               <property name="propagate">True</property>
               <property name="row">2</property>
-              <property name="sticky">e</property>
+              <property name="sticky">w</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object id="button_save" class="tk.Button">
+            <property name="anchor">center</property>
+            <property name="command">save_func</property>
+            <property name="default">normal</property>
+            <property name="text" translatable="yes">Save</property>
+            <property name="width">20</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="columnspan">2</property>
+              <property name="propagate">True</property>
+              <property name="row">3</property>
             </layout>
           </object>
         </child>
