--- a/GUIs/add_window.ui
+++ b/GUIs/add_window.ui
@@ -1,87 +1,98 @@
 <?xml version='1.0' encoding='utf-8'?>
 <interface>
-  <object id="add_window" class="tk.LabelFrame">
-    <property name="font">TkDefaultFont</property>
-    <property name="text" translatable="yes">New Tank Creation</property>
-    <property name="width">200</property>
+  <object id="add_window" class="ttk.Frame">
+    <property name="height">600</property>
+    <property name="width">800</property>
     <layout>
       <property name="column">0</property>
-      <property name="propagate">True</property>
+      <property name="propagate">False</property>
       <property name="row">0</property>
-      <rows>
-        <row id="0">
-          <property name="minsize">0</property>
-          <property name="weight">0</property>
-        </row>
-      </rows>
-      <columns>
-        <column id="0">
-          <property name="minsize">0</property>
-        </column>
-      </columns>
     </layout>
     <child>
-      <object id="Text_1" class="tk.Text">
-        <property name="height">10</property>
-        <property name="width">50</property>
-        <layout>
-          <property name="column">1</property>
-          <property name="propagate">True</property>
-          <property name="row">0</property>
-          <property name="rowspan">5</property>
-        </layout>
-      </object>
-    </child>
-    <child>
-      <object id="Entry_1" class="ttk.Entry">
-        <property name="textvariable">string:url_end</property>
-        <property name="width">20</property>
-        <layout>
-          <property name="column">0</property>
-          <property name="pady">10</property>
-          <property name="propagate">True</property>
-          <property name="row">0</property>
-          <property name="sticky">s</property>
-        </layout>
-      </object>
-    </child>
-    <child>
-      <object id="Button_1" class="tk.Button">
-        <property name="command">download_data_func</property>
-        <property name="height">2</property>
-        <property name="text" translatable="yes">Show</property>
-        <property name="width">20</property>
+      <object id="Frame_2" class="ttk.Frame">
+        <property name="height">200</property>
+        <property name="padding">10</property>
+        <property name="width">200</property>
         <layout>
           <property name="column">0</property>
           <property name="propagate">True</property>
-          <property name="row">1</property>
+          <property name="row">4</property>
         </layout>
-      </object>
-    </child>
-    <child>
-      <object id="Button_2" class="tk.Button">
-        <property name="command">add_func</property>
-        <property name="height">2</property>
-        <property name="text" translatable="yes">Add</property>
-        <property name="width">20</property>
-        <layout>
-          <property name="column">0</property>
-          <property name="propagate">True</property>
-          <property name="row">2</property>
-        </layout>
-      </object>
-    </child>
-    <child>
-      <object id="Button_3" class="tk.Button">
-        <property name="command">exit_func</property>
-        <property name="height">2</property>
-        <property name="text" translatable="yes">Back</property>
-        <property name="width">20</property>
-        <layout>
-          <property name="column">0</property>
-          <property name="propagate">True</property>
-          <property name="row">3</property>
-        </layout>
+        <child>
+          <object id="Text_1" class="tk.Text">
+            <property name="height">28</property>
+            <property name="width">60</property>
+            <layout>
+              <property name="column">1</property>
+              <property name="propagate">True</property>
+              <property name="row">0</property>
+              <property name="rowspan">5</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object id="Frame_3" class="ttk.Frame">
+            <property name="height">200</property>
+            <property name="width">200</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="propagate">True</property>
+              <property name="row">2</property>
+            </layout>
+            <child>
+              <object id="Entry_1" class="ttk.Entry">
+                <property name="textvariable">string:url_end</property>
+                <property name="width">20</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="pady">10</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                  <property name="sticky">s</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object id="Button_1" class="tk.Button">
+                <property name="command">download_data_func</property>
+                <property name="height">2</property>
+                <property name="text" translatable="yes">Show</property>
+                <property name="width">20</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="propagate">True</property>
+                  <property name="row">1</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object id="Button_2" class="tk.Button">
+                <property name="command">add_func</property>
+                <property name="height">2</property>
+                <property name="text" translatable="yes">Add</property>
+                <property name="width">20</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="propagate">True</property>
+                  <property name="row">2</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object id="Button_3" class="tk.Button">
+                <property name="command">exit_func</property>
+                <property name="height">2</property>
+                <property name="text" translatable="yes">Back</property>
+                <property name="width">20</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="propagate">True</property>
+                  <property name="row">3</property>
+                </layout>
+              </object>
+            </child>
+          </object>
+        </child>
       </object>
     </child>
   </object>
